29-Mar-2012 Linux/OSX Opus shell script will now call mono with --debug when -debugsymbols is passed as an argument. Running mono with --debug gives additional useful information in stack traces.

27-Mar-2012 Adding Defines option to CSharp.IOptions. Debug configurations get DEBUG. Profile configurations get TRACE.

27-Mar-2012 Fixing C# VSSolutionBuilder option for Checked (Over/underflow) and Treat Warnings as errors. Profile configurations now also get debug information.

27-Mar-2012 Removed Opus.Core.BuildSchedulerEx that is now redundant.

27-Mar-2012 Renamed Opus.Core.BuildScheduler to Opus.Core.DefaultScheduler.

27-Mar-2012 Explicitly implemented the IActionWithArguments method AssignArguments in all the actions, rather than making the method public, as it is not required to be called other than through the interface.

27-Mar-2012 Only validate package definition schema locations for the top-most package. This avoids errors occuring by the XML parsing when two dependent packages both have valid paths to the same schema.

26-Mar-2012 Fixes to the tests for pedantic warnings.

26-Mar-2012 Adding GccCommon and MingwCommon Pedantic Boolean option for ICCompilerOptions, for -pedantic. Defaults to true.

25-Mar-2012 Using a nice shell script syntax to simplify the env.sh script.

25-Mar-2012 Fixing a warning in the Bash scripts for the testpackages under Linux.

25-Mar-2012 Added workaround in Opus.Core.BaseOptionCollection.FilterOutputPaths to an invalid cast exception in Mono, from a SortedDictionary to a KeyValuePair in a foreach.

24-Mar-2012 C# VSSolutions generated now display a directory hierarchy for the source in the projects.

24-Mar-2012 Ensuring that C# projects generated with multiple configurations do not have duplicate assembly references.

24-Mar-2012 Adding Opus.Core.UniqueList generic class.
